# qarnot-sdk-python

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  MANIFEST.in  README.md  README.rst  TODO.org  example.py  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-optional.txt  requirements-test-base.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.gitlab/: dependabot.yml
apy/: __init__.py  connection.py  disk.py  session.py  task.py
doc/: Makefile  apy.rst  basic.rst  changelog.rst  conf.py  credits.rst  glossary.rst  index.rst  installation.rst  make.bat  mkdocs.yml  payload.rst  qapy.rst  qarnot.rst  samples.rst
example/: qarnot.conf  script.py  script2.py  script_verbose.py
qapy/: __init__.py  connection.py  disk.py  notification.py  task.py  utils.py
qarnot/: __init__.py  _filter.py  _retry.py  _util.py  _version.py  advanced_bucket.py  bucket.py  budget.py  carbon_facts.py  computing_quotas.py  connection.py  credits_client.py  dependency.py  disk.py  error.py  exceptions.py  forced_constant.py  forced_network_rule.py  hardware_constraint.py  helper.py  job.py  multi_slots_settings.py  notification.py  paginate.py  pool.py  privileges.py  project.py  retry_settings.py  scaling.py  scheduling_type.py  secrets.py  snapshot.py  status.py  storage.py  task.py
test/: mock_carbon_facts.py  mock_connection.py  mock_credits.py  mock_job.py  mock_pool.py  mock_project.py  mock_snapshot_status.py  mock_status.py  mock_task.py  test_advanced_bucket.py  test_bucket.py  test_budget.py  (+14 more)
(+65 files in other folders)
