[aliases]
test = pytest

[bdist_wheel]
universal = 0

[tool:pytest]
addopts = --verbose
python_files = test/*.py

[versioneer]
vcs = git
style = pep440
versionfile_source = qarnot/_version.py
versionfile_build = qarnot/_version.py
tag_prefix =
parentdir_prefix = qarnot-

[easy_install]

[options]
setup_requires = wheel
